--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <div class="container">
-    <h1>🛡️ PhishGaurd</h1>
+    <h1>🛡️ PhishGaurd2.0</h1>
     <p>AI Based Phishing Detection Tool</p>
 
     <form method="POST">
